fix overflow bug

--- a/shop/public/assets/css/login.css
+++ b/shop/public/assets/css/login.css
@@ -138,5 +138,6 @@ hr.accent-blue {
 
 .login-card {
   min-width: 30%;
-  padding-top: 15px;
+  padding-top: 10px;
+  max-height: 99vh;
 }
